ingress-controller/pod-mynginx-demo.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-demonginx
  labels:
    app: demonginx-pod
    version: v1
  namespace: ns-dev
spec:
  nodeName: ubuntu22-server03
  containers:
  - name: ubuntu22-server-mynginx
    image: strrzj/ubuntu22-server-mynginx:latest
    imagePullPolicy: IfNotPresent
    volumeMounts:
    - name: nginx-config
      mountPath: /etc/nginx/conf.d/nginx.conf
      readOnly: true
  volumes:
  - name: nginx-config
    hostPath:
      path: /data/nginx/nginx.conf
      type: File  
  restartPolicy: OnFailure
