ingress-controller/svc-mydemoapp.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-mydemoapp
  namespace: ns-dev
spec:
  ports:
  - name: 80-80
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: deploy-mydemoapp
    version: v1
  type: ClusterIP
