ingress-controller/svc-mynginx.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-mynginx
  namespace: ns-dev
spec:
  ports:
  - name: 443-443
    port: 443
    protocol: TCP
    targetPort: 443
  - name: 80-80
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: demonginx-pod
    version: v1
  type: LoadBalancer
