ingress-controller/ingress-demoapp.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-mydemoapp
  namespace: ns-demo
spec:
  ingressClassName: nginx
  rules:
  - host: demoapp.test.com
    http:
      paths:
      - backend:
          service:
            name: svc-mydemoapp
            port:
              number: 80
        path: /
        pathType: Prefix
